--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "watch": "npx onchange src/*.*js -- node src/index.js"
+    "watch": "npx onchange src/* -- node src/index.js"
   },
   "keywords": [],
   "author": "",
